# minimesh_isotropic_remesher

./: .clangd  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MESH_README.md  README.md  build.md  build.sh  configure.sh  make_submission.sh  mesh_defragmentation.md  minimesh_aliases.sh  minimesh_extension_guide.md
build-dbg/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-dbg/.cmake/api/v1/reply/: cache-v2-72b1c02cf2f2d01a9300.json  cmakeFiles-v1-499603784d31b812f8a0.json  codemodel-v2-b281093ade734de601c3.json  directory-src.minimesh.test-Debug-23f89f501d4efdaccb8d.json  index-2025-09-21T02-48-13-0222.json  target-Continuous-Debug-78804e3746685de8ddc1.json  target-ContinuousBuild-Debug-2b02c592defe8f141d54.json  target-ContinuousConfigure-Debug-275fc2acae6d2b59f278.json  target-ContinuousCoverage-Debug-36d55dfc4ff40eeaf3e8.json  target-ContinuousMemCheck-Debug-32b00025f53ec12df528.json  target-ContinuousStart-Debug-29a54f39ddd565abef77.json  target-ContinuousSubmit-Debug-c9a7b706185e2ed142df.json  target-ContinuousTest-Debug-e16606c448098eebc044.json  target-ContinuousUpdate-Debug-9402d4eda51bd298b718.json  target-Experimental-Debug-c4eea68029cb31c50ae9.json  target-ExperimentalBuild-Debug-cb605691d844304aadac.json  target-ExperimentalConfigure-Debug-b4baad32d8a693555284.json  target-ExperimentalCoverage-Debug-8b771ee74216d9ee4318.json  target-ExperimentalMemCheck-Debug-86ffde842e73cc296656.json  target-ExperimentalStart-Debug-8d0390c20842b7c7f8ae.json  target-ExperimentalSubmit-Debug-9d76475cbbe1db7e7625.json  target-ExperimentalTest-Debug-243b1b55339c2e300917.json  target-ExperimentalUpdate-Debug-356e29bdbfbb81aa1883.json  target-Nightly-Debug-02eb82e5a8b014165091.json  target-NightlyBuild-Debug-4ec4eb1c4739323e3880.json  target-NightlyConfigure-Debug-a9594acf64cdfcd88071.json  target-NightlyCoverage-Debug-d1ad5fa8f762e1e365c9.json  (+11 more)
build-dbg/Testing/: TAG
build-dbg/Testing/20250921-0153/: Test.xml
build-dbg/src/minimesh/cli/: Makefile  cmake_install.cmake
build-dbg/src/minimesh/core/: Makefile  cmake_install.cmake
build-dbg/src/minimesh/gui/: Makefile  cmake_install.cmake
build-dbg/src/minimesh/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-dbg/src/minimesh/viz/: Makefile  cmake_install.cmake
cmake/: FindEigen3.cmake
src/minimesh/cli/: main.cpp
src/minimesh/core/: CMakeLists.txt
src/minimesh/core/mohe/: fixed_uv_param.cpp  fixed_uv_param.hpp  lscm_uv_param.cpp  lscm_uv_param.hpp  mesh_analysis.cpp  mesh_analysis.hpp  mesh_connectivity.cpp  mesh_connectivity.hpp  mesh_io.cpp  mesh_io.hpp  mesh_modifier.cpp  mesh_modifier.hpp  mesh_modifier_arap.cpp  mesh_modifier_arap.hpp  mesh_modifier_edge_collapse.cpp  mesh_modifier_edge_collapse.hpp  mesh_modifier_loop_subdivision.cpp  mesh_modifier_loop_subdivision.hpp  mesh_modifier_template.cpp  mesh_modifier_template.hpp
src/minimesh/core/mohe/remesher/: remesher_isotropic.cpp  remesher_isotropic.hpp
src/minimesh/gui/: main.cpp
src/minimesh/test/: CMakeLists.txt  test_QEM.cpp  test_mesh_properties.cpp  test_mesh_utils.cpp  test_subdivision.cpp
src/minimesh/viz/: mesh_buffer.cpp  mesh_buffer.hpp  mesh_viewer.cpp  mesh_viewer.hpp
